kubernetes/topiaas-app/topiaas-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topiaas-deployment
  labels:
    app: topiaas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: topiaas
  template:
    metadata:
      labels:
        app: topiaas
    spec:
      containers:
      - name: topiaas
        image: topiaas/portal:94d07b9 #TODO tag Should be set dynamically
        ports:
        - containerPort: 5000
